'second commit starting to write some html'

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
-<head>
-    <title></title>
-    <link rel="stylesheet" href="/resources/style.css">
-</head>
-<body>
-    <header>
-        <nav></nav>
-    </header>
-    <main>
-
-    </main>
-    <footer>
-        
-    </footer>
-</body>
+<html>
+  <head>
+     <title>Oskar's Portfolio</title>
+     <link rel="stylesheet" href="/resources/style.css">
+   </head>
+   <body>
+     <header>
+         <div>
+             <h1>Perssonal Portfolio</h1>
+         </div>
+         <nav>
+             <ul>
+                 <li><a href=""></a>About</li>
+                 <li><a href=""></a>Projects</li>
+                 <li><a href=""></a>Kontakt</li>
+             </ul>
+         </nav>
+     </header>
+     <main>
+        <div>
+            <h2>Oskar Hallmans</h2>
+            <img src="" alt="Picture of me">
+            <div>
+                <p>My name is Oskar Hallmans i'am 29 years old born in 1992.</br> I'am born and raised in Vallentuna it's locate 30 kilometers outside Swedens capital Stockholm.
+                I still live their today. I have hade alot of diffrent jobs but the last couple of years i have been on sick leave. <br>
+                My education is not relate to computers or programming i'am self learen trough testing and some classes on codecademy website.</p>
+            </div>
+        </div>
+     </main>
+     <footer>
+        <div class="kontakt">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+     </footer>
+  </body>
+</html>
