--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+                                       <!DOCTYPE html>
 <html>
   <head>
      <title>Oskar's Portfolio</title>
@@ -7,23 +7,23 @@
    <body>
      <header>
          <div>
-             <h1>Perssonal Portfolio</h1>
+             <h1>Personal Portfolio</h1>
          </div>
          <nav>
              <ul>
-                 <li><a href=""></a>About</li>
-                 <li><a href=""></a>Projects</li>
-                 <li><a href=""></a>Kontakt</li>
+                 <li><a href="">About</a></li>
+                 <li><a href="">Projects</a></li>
+                 <li><a href="">Kontakt</a></li>
              </ul>
          </nav>
      </header>
      <main>
-        <div>
+        <div class="about">
             <h2>Oskar Hallmans</h2>
             <img src="" alt="Picture of me">
             <div>
-                <p>My name is Oskar Hallmans i'am 29 years old born in 1992.</br> I'am born and raised in Vallentuna it's locate 30 kilometers outside Swedens capital Stockholm.
-                I still live their today. I have hade alot of diffrent jobs but the last couple of years i have been on sick leave. <br>
+                <p>My name is Oskar Hallmans i'am 29 years old born in 1992.</br> I'am born and raised in Vallentuna it's locate 30 kilometers outside Swedens capital Stockholm
+                where i still live today.<br> I have hade alot of diffrent jobs but the last couple of years i have been on sick leave. <br>
                 My education is not relate to computers or programming i'am self learen trough testing and some classes on codecademy website.</p>
             </div>
         </div>
@@ -31,9 +31,9 @@
      <footer>
         <div class="kontakt">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>073 5468 540</li>
+                <li> orrehallmans@gmail.com</li>
+                <li>Åby Alle 7A, 18648 Vallentuna Sweden</li>
             </ul>
         </div>
      </footer>
