'more html setup'

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,14 +11,14 @@
          </div>
          <nav>
              <ul>
-                 <li><a href="">About</a></li>
-                 <li><a href="">Projects</a></li>
-                 <li><a href="">Kontakt</a></li>
+                 <li><a href="#about">About</a></li>
+                 <li><a href="#projects">Projects</a></li>
+                 <li><a href="#kontakt">Kontakt</a></li>
              </ul>
          </nav>
      </header>
      <main>
-        <div class="about">
+        <div id="about">
             <h2>Oskar Hallmans</h2>
             <img src="" alt="Picture of me">
             <div>
@@ -27,9 +27,30 @@
                 My education is not relate to computers or programming i'am self learen trough testing and some classes on codecademy website.</p>
             </div>
         </div>
+        <div id="projects">
+            <h2>My Work</h2> 
+            <div>
+                <h3>Projects</h3>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div>
+                <h3>Descriptions</h3>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
      </main>
      <footer>
-        <div class="kontakt">
+        <div id="kontakt">
             <ul>
                 <li>073 5468 540</li>
                 <li> orrehallmans@gmail.com</li>
