--- a/index.html
+++ b/index.html
@@ -32,25 +32,26 @@
             <div>
                 <h3>Projects</h3>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Dasmotos <a href=""></a></li>
+                    <li>Design system <a href=""></a></li>
+                    <li>Excursion <a href=""></a></li>
+                    <li>Random Message <a href=""></a></li>
                 </ul>
             </div>
             <div>
                 <h3>Descriptions</h3>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Training html/css</li>
+                    <li>Training html/css</li>
+                    <li>Training html/css</li>
+                    <li>Training js</li>
                 </ul>
             </div>
         </div>
      </main>
      <footer>
         <div id="kontakt">
+            <h3>Kontakt information</h3>
             <ul>
                 <li>073 5468 540</li>
                 <li> orrehallmans@gmail.com</li>
