--- a/index.html
+++ b/index.html
@@ -29,24 +29,14 @@
                  <br> some classes on codecademy website.</p>
             </div>
         </div>
-        <div id="projects" class="contanier">
-            <h2 class="mywork">My Work</h2> 
+        <div id="projects" class="contanier"> 
             <div class="projekt">
                 <h3>Projects</h3>
                 <ul>
-                    <li>Dasmotos <a href=""></a></li>
-                    <li>Design system <a href=""></a></li>
-                    <li>Excursion <a href=""></a></li>
-                    <li>Random Message <a href=""></a></li>
-                </ul>
-            </div>
-           <h3>Descriptions</h3> 
-           <div class="descript">
-                <ul>
-                    <li>Training html/css</li>
-                    <li>Training html/css</li>
-                    <li>Training html/css</li>
-                    <li>Training js</li>
+                    <li>Nothing to show <a href=""></a></li>
+                    <li>Nothing to show <a href=""></a></li>
+                    <li>Nothing to show <a href=""></a></li>
+                    <li>Nothing to show <a href=""></a></li>
                 </ul>
             </div>
         </div>
