'ganska nära slutet'

--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
         </div>
      </main>
      <footer>
-        <div id="kontakt">
-            <h3>Kontakt information</h3>
-            <ul>
-                <li>073 5468 540</li>
-                <li> orrehallmans@gmail.com</li>
-                <li>Åby Alle 7A, 18648 Vallentuna Sweden</li>
+        <div id="kontakt" class="kontakt">
+            <ul class="kontaktlist">
+                <li class="kontaktitems">Tel: 073 5468 540</li>
+                <li class="kontaktitems">Email: orrehallmans@gmail.com</li>
+                <li class="kontaktitems">Adress: Åby Alle 7A, 18648 Vallentuna Sweden</li>
             </ul>
         </div>
      </footer>
